{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 509,
  "lineage": "1f3fee7e-a98f-3bd1-20e3-a8833b6e6075",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:security-group/sg-0623f6426a7ff042c",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0623f6426a7ff042c",
            "ingress": [],
            "name": "ruyffelaert-eks-M5Ttx0t3-cluster-2024121819552025380000000f",
            "name_prefix": "ruyffelaert-eks-M5Ttx0t3-cluster-",
            "owner_id": "601427279990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ruyffelaert-eks-M5Ttx0t3-cluster"
            },
            "tags_all": {
              "Name": "ruyffelaert-eks-M5Ttx0t3-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:security-group/sg-019983b57cacf4d87",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-019983b57cacf4d87",
            "ingress": [],
            "name": "ruyffelaert-eks-M5Ttx0t3-node-2024121819551929490000000d",
            "name_prefix": "ruyffelaert-eks-M5Ttx0t3-node-",
            "owner_id": "601427279990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ruyffelaert-eks-M5Ttx0t3-node",
              "kubernetes.io/cluster/ruyffelaert-eks-M5Ttx0t3": "owned"
            },
            "tags_all": {
              "Name": "ruyffelaert-eks-M5Ttx0t3-node",
              "kubernetes.io/cluster/ruyffelaert-eks-M5Ttx0t3": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3871994838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0623f6426a7ff042c",
            "security_group_rule_id": "sgr-034e41424a2588237",
            "self": false,
            "source_security_group_id": "sg-019983b57cacf4d87",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3926263662",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-0ec61ac7d139be12b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1033298178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-0696bea11cff5e4d8",
            "self": false,
            "source_security_group_id": "sg-0623f6426a7ff042c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2981049132",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-03aef37807c850cb0",
            "self": false,
            "source_security_group_id": "sg-0623f6426a7ff042c",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2028819642",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-0c897e45035eaa463",
            "self": false,
            "source_security_group_id": "sg-0623f6426a7ff042c",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1806788763",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-0db83651659a03494",
            "self": false,
            "source_security_group_id": "sg-0623f6426a7ff042c",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-252730192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-0f7419a49a36b2b5e",
            "self": false,
            "source_security_group_id": "sg-0623f6426a7ff042c",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1762906703",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-0dd605e4a66325065",
            "self": false,
            "source_security_group_id": "sg-0623f6426a7ff042c",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1356740119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-05813200006f8e905",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1856241062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-0593bf9c29e1c8891",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3405536841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-019983b57cacf4d87",
            "security_group_rule_id": "sgr-0ce5e74fd6cb0d255",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:network-acl/acl-0d5ab5decb23fffda",
            "default_network_acl_id": "acl-0d5ab5decb23fffda",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d5ab5decb23fffda",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "601427279990",
            "subnet_ids": [
              "subnet-062077c388075f2da",
              "subnet-099ae4db77e672537",
              "subnet-09ad776223635be4f",
              "subnet-0d3e61ab7c6d07f73",
              "subnet-0e43df092a5a27bdb",
              "subnet-0fe7786d260ecec52"
            ],
            "tags": {
              "Name": "ruyffelaert-vpc-default"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-default"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:route-table/rtb-0f86a31c63894cf7f",
            "default_route_table_id": "rtb-0f86a31c63894cf7f",
            "id": "rtb-0f86a31c63894cf7f",
            "owner_id": "601427279990",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "ruyffelaert-vpc-default"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:security-group/sg-0fbbcccb943d6abf0",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0fbbcccb943d6abf0",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "601427279990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ruyffelaert-vpc-default"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-default"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fde3a4c36d81ca6e",
            "arn": "arn:aws:ec2:ca-west-1:601427279990:elastic-ip/eipalloc-0fde3a4c36d81ca6e",
            "domain": "vpc",
            "id": "eipalloc-0fde3a4c36d81ca6e",
            "network_border_group": "ca-west-1",
            "public_dns": "ec2-40-176-171-171.ca-west-1.compute.amazonaws.com",
            "public_ip": "40.176.171.171",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ruyffelaert-vpc-ca-west-1a"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-ca-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:internet-gateway/igw-0198b2746185c07d4",
            "id": "igw-0198b2746185c07d4",
            "owner_id": "601427279990",
            "tags": {
              "Name": "ruyffelaert-vpc"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fde3a4c36d81ca6e",
            "association_id": "eipassoc-0c1767615abd828ad",
            "connectivity_type": "public",
            "id": "nat-00896702d6a89f104",
            "network_interface_id": "eni-02e1f85c099574d37",
            "private_ip": "10.0.4.178",
            "public_ip": "40.176.171.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09ad776223635be4f",
            "tags": {
              "Name": "ruyffelaert-vpc-ca-west-1a"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-ca-west-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c9f7724bed334b41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00896702d6a89f104",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c9f7724bed334b4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0198b2746185c07d4",
            "id": "r-rtb-017d140488ecf1d701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017d140488ecf1d70",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:route-table/rtb-01c9f7724bed334b4",
            "id": "rtb-01c9f7724bed334b4",
            "owner_id": "601427279990",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ruyffelaert-vpc-private"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:route-table/rtb-017d140488ecf1d70",
            "id": "rtb-017d140488ecf1d70",
            "owner_id": "601427279990",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ruyffelaert-vpc-public"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037bcee04de2a8cb0",
            "route_table_id": "rtb-01c9f7724bed334b4",
            "subnet_id": "subnet-099ae4db77e672537"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaef82535794cf77",
            "route_table_id": "rtb-01c9f7724bed334b4",
            "subnet_id": "subnet-0fe7786d260ecec52"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0100421d7b2ac5aee",
            "route_table_id": "rtb-01c9f7724bed334b4",
            "subnet_id": "subnet-062077c388075f2da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1b0d756f0bb6bef",
            "route_table_id": "rtb-017d140488ecf1d70",
            "subnet_id": "subnet-09ad776223635be4f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0d2bf870d85ea30",
            "route_table_id": "rtb-017d140488ecf1d70",
            "subnet_id": "subnet-0d3e61ab7c6d07f73"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bcbe3dc2bcfc4714",
            "route_table_id": "rtb-017d140488ecf1d70",
            "subnet_id": "subnet-0e43df092a5a27bdb"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:subnet/subnet-099ae4db77e672537",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1a",
            "availability_zone_id": "caw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099ae4db77e672537",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601427279990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruyffelaert-vpc-private-ca-west-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-private-ca-west-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:subnet/subnet-0fe7786d260ecec52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1b",
            "availability_zone_id": "caw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe7786d260ecec52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601427279990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruyffelaert-vpc-private-ca-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-private-ca-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:subnet/subnet-062077c388075f2da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1c",
            "availability_zone_id": "caw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062077c388075f2da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601427279990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruyffelaert-vpc-private-ca-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-private-ca-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:subnet/subnet-09ad776223635be4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1a",
            "availability_zone_id": "caw1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ad776223635be4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601427279990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruyffelaert-vpc-public-ca-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-public-ca-west-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:subnet/subnet-0d3e61ab7c6d07f73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1b",
            "availability_zone_id": "caw1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3e61ab7c6d07f73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601427279990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruyffelaert-vpc-public-ca-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-public-ca-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:subnet/subnet-0e43df092a5a27bdb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1c",
            "availability_zone_id": "caw1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e43df092a5a27bdb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "601427279990",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ruyffelaert-vpc-public-ca-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc-public-ca-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0efce733c999ea336"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:601427279990:vpc/vpc-0efce733c999ea336",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5ab5decb23fffda",
            "default_route_table_id": "rtb-0f86a31c63894cf7f",
            "default_security_group_id": "sg-0fbbcccb943d6abf0",
            "dhcp_options_id": "dopt-0c268ae2253a101ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efce733c999ea336",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f86a31c63894cf7f",
            "owner_id": "601427279990",
            "tags": {
              "Name": "ruyffelaert-vpc"
            },
            "tags_all": {
              "Name": "ruyffelaert-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}